3.0.0/api/_sources/library/arcticdb.version_store.library.Library.rst.txt
arcticdb.version\_store.library.Library
=======================================

.. currentmodule:: arcticdb.version_store.library

.. autoclass:: Library

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Library.__init__
      ~Library.append
      ~Library.append_batch
      ~Library.defragment_symbol_data
      ~Library.delete
      ~Library.delete_data_in_range
      ~Library.delete_snapshot
      ~Library.delete_staged_data
      ~Library.finalize_staged_data
      ~Library.get_description
      ~Library.get_description_batch
      ~Library.get_staged_symbols
      ~Library.has_symbol
      ~Library.head
      ~Library.is_symbol_fragmented
      ~Library.list_snapshots
      ~Library.list_symbols
      ~Library.list_versions
      ~Library.options
      ~Library.prune_previous_versions
      ~Library.read
      ~Library.read_batch
      ~Library.read_metadata
      ~Library.read_metadata_batch
      ~Library.reload_symbol_list
      ~Library.snapshot
      ~Library.sort_and_finalize_staged_data
      ~Library.tail
      ~Library.update
      ~Library.write
      ~Library.write_batch
      ~Library.write_metadata
      ~Library.write_metadata_batch
      ~Library.write_pickle
      ~Library.write_pickle_batch
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Library.name
   
   